# BACKEND-myGymApp

analytics_service/: ReadMe
analytics_service/app/: main.py
authentication_service/: .env  Auth-Services.postman_collection.json  Cargo.toml  readME.md
authentication_service/db_migrations/: Cargo.toml
authentication_service/db_migrations/migrations/2024-03-16-205520_create_users/: up.sql
authentication_service/db_migrations/migrations/2024-03-16-205709_muscle_group/: up.sql
authentication_service/db_migrations/migrations/2024-03-28-170947_add_user_columns/: up.sql
authentication_service/db_migrations/migrations/2024-03-28-171842_body_measurements/: up.sql
authentication_service/db_migrations/src/: schema.rs
authentication_service/src/: main.rs  mod.rs
authentication_service/src/database/: connection.rs
authentication_service/src/middleware/: middleware.rs
authentication_service/src/models/: body_measurements.rs  forgot_password.rs  login.rs  mod.rs  profile.rs  signup.rs  tokens.rs  user_inputs.rs  users.rs
authentication_service/src/routes/: entry_point.rs  health.rs  login.rs  mod.rs
authentication_service/src/schema/: body_measurements.rs  mod.rs  muscles.rs  users.rs
authentication_service/src/services/: body_measurements.rs  forgot_password.rs  get_body_measurements.rs  get_user.rs  insert_body_measurements.rs  login.rs  mod.rs  mutation.rs  query.rs  signup.rs  token.rs  user_profile.rs
authentication_service/src/utils/: helpers.rs  logger.rs  mod.rs  token.rs
authentication_service/tests/unit_test/: test_health.rs
(+18 files in other folders)
