workspace = { members = ["db_migrations"] }
[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.21"
juniper = "0.13.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
serde_json = "1.0"
bcrypt = "0.15.0"
warp = "0.3.6"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"

